--- a/Jobsheet_06_PBO.ipynb
+++ b/Jobsheet_06_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObHtkJQXKES+5MMXgplSTD",
+      "authorship_tag": "ABX9TyPq7QInljt6uIAXhfziPRy0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -293,12 +293,12 @@
       ],
       "metadata": {
         "id": "gESq_HyWdIWu",
-        "outputId": "925bb56c-2412-45b6-dec4-b4eef17ab8fb",
+        "outputId": "92fa5b08-0896-48e4-beea-868f0b652e78",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,28 +309,28 @@
             "Inisialisasi alat pembayaran: Kartu Kredit\n",
             " -> Kartu Kredit ************3456(Budi Cahyono) siap.\n",
             "Inisialisasi alat pembayaran:  Dompet Digital (Gopay)\n",
-            " -> Dompet Digital 08123456789 siap (Saldo: Rp124.264,00).\n",
+            " -> Dompet Digital 08123456789 siap (Saldo: Rp494.247,00).\n",
             "\n",
             "Melakukan Pembayaran:\n",
             "\n",
             "Mencoba bayar dengan Kartu Kredit:\n",
             "Metode Pembayran: Kartu Kredit\n",
             "Memproses pembayaran Rp150.000,00 via Kartu Kredit ************3456...\n",
-            " Pembayaran Kartu Kredit berhasil!\n",
-            "Status Transaksi KK: Sukses\n",
+            " Print Kartu Kredit gagal (limit tidak cukup/Error).\n",
+            "Status Transaksi KK: Gagal\n",
             "\n",
             "Mencoba bayar dengan Gopay (Jumlah Kecil):\n",
             "Metode Pembayran:  Dompet Digital (Gopay)\n",
             "Memproses pembayaran Rp75.000,00 via Dompet Digital 08123456789...\n",
             "Pembyaran Dompet Digital Berhasil!\n",
-            "Saldo tersisa: Rp124.264,00\n",
+            "Saldo tersisa: Rp494.247,00\n",
             "Status Transaksi GoPay 1: Sukses\n",
             "\n",
             "Mencoba bayar dengan GoPay (Jumlah Besar):\n",
             "Metode Pembayran:  Dompet Digital (Gopay)\n",
             "Memproses pembayaran Rp1.000.000,00 via Dompet Digital 08123456789...\n",
             "Pembayaran Dompet Digital Gagal (Saldo tidak mencukupi).\n",
-            "Saldo tersisa: Rp124.264,00\n",
+            "Saldo tersisa: Rp494.247,00\n",
             "Status Transaksi GoPay 2: Gagal\n"
           ]
         }
@@ -752,12 +752,106 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from abc import ABC, abstractmethod\n",
+        "\n",
+        "class Senjata(ABC):\n",
+        "    def __init__(self, nama):\n",
+        "        self._nama = nama\n",
+        "\n",
+        "    @abstractmethod\n",
+        "    def serang(self):\n",
+        "        pass\n",
+        "\n",
+        "    @property\n",
+        "    @abstractmethod\n",
+        "    def daya_tahan(self):\n",
+        "        pass\n",
+        "\n",
+        "    def info_nama(self):\n",
+        "        print(f\"Nama senjata: {self._nama}\")\n",
+        "\n",
+        "class Pedang(Senjata):\n",
+        "    def __init__(self, nama, panjang_bilah):\n",
+        "        super().__init__(nama)\n",
+        "        self.panjang_bilah = panjang_bilah\n",
+        "        self._daya_tahan = 100\n",
+        "\n",
+        "    def serang(self):\n",
+        "        print(f\"Pedang {self._nama} menebas dengan bilah sepanjang {self.panjang_bilah} cm!\")\n",
+        "\n",
+        "    @property\n",
+        "    def daya_tahan(self):\n",
+        "        return self._daya_tahan\n",
+        "\n",
+        "    @daya_tahan.setter\n",
+        "    def daya_tahan(self, nilai):\n",
+        "        self._daya_tahan = nilai\n",
+        "\n",
+        "class Panah(Senjata):\n",
+        "    def __init__(self, nama, jumlah_anak_panah):\n",
+        "        super().__init__(nama)\n",
+        "        self._jumlah_anak_panah = jumlah_anak_panah\n",
+        "\n",
+        "    def serang(self):\n",
+        "        if self._jumlah_anak_panah > 0:\n",
+        "            self._jumlah_anak_panah -= 1\n",
+        "            print(f\"Panah {self._nama} melesat! Sisa anak panah: {self._jumlah_anak_panah}.\")\n",
+        "        else:\n",
+        "            print(f\"Amunisi Panah {self._nama} habis!\")\n",
+        "\n",
+        "    @property\n",
+        "    def daya_tahan(self):\n",
+        "        return self._jumlah_anak_panah\n",
+        "\n",
+        "    @daya_tahan.setter\n",
+        "    def daya_tahan(self, jumlah):\n",
+        "        self._jumlah_anak_panah = jumlah\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    pedang_samurai = Pedang(\"Samurai\", 75.0)\n",
+        "    pedang_samurai.serang()\n",
+        "    print(\"Daya tahan pedang:\", pedang_samurai.daya_tahan)\n",
+        "    print()\n",
+        "    panah_petir = Panah(\"Petir\", 3)\n",
+        "    for _ in range(5):\n",
+        "        panah_petir.serang()\n",
+        "    print(\"Sisa ammo panah:\", panah_petir.daya_tahan)\n",
+        "\n",
+        "    print()\n",
+        "\n",
+        "    try:\n",
+        "        senjata_aneh = Senjata(\"Misterius\")\n",
+        "    except TypeError as e:\n",
+        "        print(f\"Error saat membuat objek dari kelas abstrak: {e}\")\n"
+      ],
       "metadata": {
-        "id": "VZyzYLqw6T20"
+        "id": "VZyzYLqw6T20",
+        "outputId": "56f373d1-6fdb-4970-e442-8f96365cc5e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pedang Samurai menebas dengan bilah sepanjang 75.0 cm!\n",
+            "Daya tahan pedang: 100\n",
+            "\n",
+            "Panah Petir melesat! Sisa anak panah: 2.\n",
+            "Panah Petir melesat! Sisa anak panah: 1.\n",
+            "Panah Petir melesat! Sisa anak panah: 0.\n",
+            "Amunisi Panah Petir habis!\n",
+            "Amunisi Panah Petir habis!\n",
+            "Sisa ammo panah: 0\n",
+            "\n",
+            "Error saat membuat objek dari kelas abstrak: Can't instantiate abstract class Senjata with abstract methods daya_tahan, serang\n"
+          ]
+        }
+      ]
     }
   ]
 }
