--- a/Jobsheet_06_PBO.ipynb
+++ b/Jobsheet_06_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPq7QInljt6uIAXhfziPRy0",
+      "authorship_tag": "ABX9TyPn7+gw+L3726AqJ03ngnkG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,10 +46,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "DonJIlCyXItu",
-        "outputId": "1f70a8c8-e8ee-4672-8284-4b316ae18e3d",
+        "outputId": "f69f3fff-d69c-4d05-fd6a-b187e2c06f3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -146,12 +146,12 @@
       ],
       "metadata": {
         "id": "4NpXg7ZDYm6h",
-        "outputId": "00140075-7fcb-4f88-8c5b-55093b5fa525",
+        "outputId": "e8a99306-ff38-49c9-d88a-9c69faa11743",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,12 +186,12 @@
       ],
       "metadata": {
         "id": "j_vZVGOyYnhj",
-        "outputId": "ec0969b9-8cfb-4f62-8d85-f414f541942a",
+        "outputId": "2da34aad-ee52-4d2e-cf04-3c7b1890ecad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
         "if __name__ == \"__main__\":\n",
         "  print(\"\\nMembuat Objek Alat Pembayaran...\")\n",
         "  kartu_bca = KartuKredit(\"1234-5678-9012-3456\", \"Budi Cahyono\")\n",
-        "  gopay = DompetDigital(\"08123456789\", \"Gopay\")\n",
+        "  gopay = DompetDigital(\"08123456789\", \"GoPay\")\n",
         "\n",
         "  print(\"\\nMelakukan Pembayaran:\")\n",
         "  print(\"\\nMencoba bayar dengan Kartu Kredit:\")\n",
@@ -282,7 +282,7 @@
         "  status_kk = kartu_bca.proses_pembayaran(150000)\n",
         "  print(f\"Status Transaksi KK: {'Sukses' if status_kk else 'Gagal'}\")\n",
         "\n",
-        "  print(\"\\nMencoba bayar dengan Gopay (Jumlah Kecil):\")\n",
+        "  print(\"\\nMencoba bayar dengan GoPay (Jumlah Kecil):\")\n",
         "  gopay.info()\n",
         "  status_gopay1 = gopay.proses_pembayaran(75000)\n",
         "  print(f\"Status Transaksi GoPay 1: {'Sukses' if status_gopay1 else 'Gagal'}\")\n",
@@ -293,12 +293,12 @@
       ],
       "metadata": {
         "id": "gESq_HyWdIWu",
-        "outputId": "92fa5b08-0896-48e4-beea-868f0b652e78",
+        "outputId": "1ffa0461-4ecf-4e72-f360-8134cb049665",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,8 +308,8 @@
             "Membuat Objek Alat Pembayaran...\n",
             "Inisialisasi alat pembayaran: Kartu Kredit\n",
             " -> Kartu Kredit ************3456(Budi Cahyono) siap.\n",
-            "Inisialisasi alat pembayaran:  Dompet Digital (Gopay)\n",
-            " -> Dompet Digital 08123456789 siap (Saldo: Rp494.247,00).\n",
+            "Inisialisasi alat pembayaran:  Dompet Digital (GoPay)\n",
+            " -> Dompet Digital 08123456789 siap (Saldo: Rp307.782,00).\n",
             "\n",
             "Melakukan Pembayaran:\n",
             "\n",
@@ -319,18 +319,18 @@
             " Print Kartu Kredit gagal (limit tidak cukup/Error).\n",
             "Status Transaksi KK: Gagal\n",
             "\n",
-            "Mencoba bayar dengan Gopay (Jumlah Kecil):\n",
-            "Metode Pembayran:  Dompet Digital (Gopay)\n",
+            "Mencoba bayar dengan GoPay (Jumlah Kecil):\n",
+            "Metode Pembayran:  Dompet Digital (GoPay)\n",
             "Memproses pembayaran Rp75.000,00 via Dompet Digital 08123456789...\n",
             "Pembyaran Dompet Digital Berhasil!\n",
-            "Saldo tersisa: Rp494.247,00\n",
+            "Saldo tersisa: Rp307.782,00\n",
             "Status Transaksi GoPay 1: Sukses\n",
             "\n",
             "Mencoba bayar dengan GoPay (Jumlah Besar):\n",
-            "Metode Pembayran:  Dompet Digital (Gopay)\n",
+            "Metode Pembayran:  Dompet Digital (GoPay)\n",
             "Memproses pembayaran Rp1.000.000,00 via Dompet Digital 08123456789...\n",
             "Pembayaran Dompet Digital Gagal (Saldo tidak mencukupi).\n",
-            "Saldo tersisa: Rp494.247,00\n",
+            "Saldo tersisa: Rp307.782,00\n",
             "Status Transaksi GoPay 2: Gagal\n"
           ]
         }
@@ -428,12 +428,12 @@
       ],
       "metadata": {
         "id": "OVk-zLCsYpnE",
-        "outputId": "063e36ed-7f37-487a-b3ec-2ec05852cfb5",
+        "outputId": "e44f6863-913c-4bdb-8d5b-7aeb36a39ddc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
             "Mencetak Dokumen Teks 'catatan_rapat.txt':\n",
             "===============\n",
             "Poin Penting:\n",
-            "- Bahas budhet\n",
+            "- Bahas budget\n",
             "- Tentukan timeline\n",
             "===============\n",
             "Menyimpan Dokumen Teks 'catatan_rapat.txt' ke disk...\n",
@@ -557,12 +557,12 @@
       ],
       "metadata": {
         "id": "q0RSlH35YqGr",
-        "outputId": "c9b1467e-5909-4898-89f4-62e13cb4d46f",
+        "outputId": "75c72ff9-2fec-4324-de4c-55e57716e3fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +595,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from tokenize import LBRACE\n",
         "from abc import ABC, abstractmethod\n",
         "\n",
         "class ElemenGrafis(ABC):\n",
@@ -691,12 +690,12 @@
       ],
       "metadata": {
         "id": "nPMTY-KjYqf3",
-        "outputId": "be6cbddb-784d-401e-a084-70bdcd0a23a0",
+        "outputId": "16289884-9fa0-47d8-b184-2abbee5328f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,8 +755,48 @@
         "from abc import ABC, abstractmethod\n",
         "\n",
         "class Senjata(ABC):\n",
+        "  def __init__(self, nama):\n",
+        "    self.nama = nama\n",
+        "    print(f\"[Senjata __init__] Membuat Senjata: {self.nama}\")\n",
+        "\n",
+        "  @abstractmethod\n",
+        "  def serang(self):\n",
+        "    pass\n",
+        "\n",
+        "  @property\n",
+        "  @abstractmethod\n",
+        "  def daya(self):\n",
+        "    pass\n",
+        "\n",
+        "  def info_nama(self):\n",
+        "    print(f\"Nama Senjata: {self.nama}\")\n",
+        "\n",
+        "class Pedang(Senjata):\n",
+        "  def __init__(self, nama, panjang_bilah):\n",
+        "    super().__init__(nama)\n",
+        "    self.panjang_bilah = panjang_bilah\n",
+        "\n",
+        "\n",
+        "class Panah(Senjata):\n",
+        "  def\n",
+        "\n",
+        "if __name__ == \"__main__\":\n"
+      ],
+      "metadata": {
+        "id": "VZyzYLqw6T20"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from abc import ABC, abstractmethod\n",
+        "\n",
+        "# Kelas Abstrak\n",
+        "class Senjata(ABC):\n",
         "    def __init__(self, nama):\n",
-        "        self._nama = nama\n",
+        "        self.nama = nama\n",
         "\n",
         "    @abstractmethod\n",
         "    def serang(self):\n",
@@ -765,29 +804,31 @@
         "\n",
         "    @property\n",
         "    @abstractmethod\n",
-        "    def daya_tahan(self):\n",
+        "    def daya(self):\n",
         "        pass\n",
         "\n",
         "    def info_nama(self):\n",
-        "        print(f\"Nama senjata: {self._nama}\")\n",
+        "        print(f\"Nama senjata: {self.nama}\")\n",
         "\n",
+        "# Kelas Anak Konkret: Pedang\n",
         "class Pedang(Senjata):\n",
         "    def __init__(self, nama, panjang_bilah):\n",
         "        super().__init__(nama)\n",
         "        self.panjang_bilah = panjang_bilah\n",
-        "        self._daya_tahan = 100\n",
+        "        self._daya_tahan = 100  # Misalnya nilai tetap\n",
         "\n",
         "    def serang(self):\n",
-        "        print(f\"Pedang {self._nama} menebas dengan bilah sepanjang {self.panjang_bilah} cm!\")\n",
+        "        print(f\"Pedang {self.nama} menebas dengan bilah sepanjang {self.panjang_bilah} cm!\")\n",
         "\n",
         "    @property\n",
-        "    def daya_tahan(self):\n",
+        "    def daya(self):\n",
         "        return self._daya_tahan\n",
         "\n",
-        "    @daya_tahan.setter\n",
-        "    def daya_tahan(self, nilai):\n",
+        "    @daya.setter\n",
+        "    def daya(self, nilai):\n",
         "        self._daya_tahan = nilai\n",
         "\n",
+        "# Kelas Anak Konkret: Panah\n",
         "class Panah(Senjata):\n",
         "    def __init__(self, nama, jumlah_anak_panah):\n",
         "        super().__init__(nama)\n",
@@ -796,43 +837,48 @@
         "    def serang(self):\n",
         "        if self._jumlah_anak_panah > 0:\n",
         "            self._jumlah_anak_panah -= 1\n",
-        "            print(f\"Panah {self._nama} melesat! Sisa anak panah: {self._jumlah_anak_panah}.\")\n",
+        "            print(f\"Panah {self.nama} melesat! Sisa anak panah: {self._jumlah_anak_panah}\")\n",
         "        else:\n",
-        "            print(f\"Amunisi Panah {self._nama} habis!\")\n",
+        "            print(f\"Amunisi Panah {self.nama} habis!\")\n",
         "\n",
         "    @property\n",
-        "    def daya_tahan(self):\n",
+        "    def daya(self):\n",
         "        return self._jumlah_anak_panah\n",
         "\n",
-        "    @daya_tahan.setter\n",
-        "    def daya_tahan(self, jumlah):\n",
+        "    @daya.setter\n",
+        "    def daya(self, jumlah):\n",
         "        self._jumlah_anak_panah = jumlah\n",
         "\n",
+        "# Kode Utama\n",
         "if __name__ == \"__main__\":\n",
+        "    # Buat objek Pedang dan Panah\n",
         "    pedang_samurai = Pedang(\"Samurai\", 75.0)\n",
+        "    panah_hijau = Panah(\"Hijau\", 3)\n",
+        "\n",
+        "    # Panggil metode serang\n",
         "    pedang_samurai.serang()\n",
-        "    print(\"Daya tahan pedang:\", pedang_samurai.daya_tahan)\n",
-        "    print()\n",
-        "    panah_petir = Panah(\"Petir\", 3)\n",
-        "    for _ in range(5):\n",
-        "        panah_petir.serang()\n",
-        "    print(\"Sisa ammo panah:\", panah_petir.daya_tahan)\n",
+        "    print(f\"Daya tahan pedang: {pedang_samurai.daya}\\n\")\n",
         "\n",
-        "    print()\n",
+        "    panah_hijau.serang()\n",
+        "    panah_hijau.serang()\n",
+        "    panah_hijau.serang()\n",
+        "    panah_hijau.serang()  # Harusnya kehabisan\n",
+        "    print(f\"Sisa ammo panah: {panah_hijau.daya}\\n\")\n",
         "\n",
+        "    # (Opsional) Coba instansiasi kelas abstrak\n",
         "    try:\n",
-        "        senjata_aneh = Senjata(\"Misterius\")\n",
+        "        senjata_misterius = Senjata(\"Misterius\")\n",
         "    except TypeError as e:\n",
-        "        print(f\"Error saat membuat objek dari kelas abstrak: {e}\")\n"
+        "        print(f\"Error: {e}\")\n"
       ],
       "metadata": {
-        "id": "VZyzYLqw6T20",
-        "outputId": "56f373d1-6fdb-4970-e442-8f96365cc5e3",
+        "id": "6RMjeSU2ElQ2",
+        "outputId": "1db6da01-3b2a-42dc-f127-af253331276a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,14 +887,13 @@
             "Pedang Samurai menebas dengan bilah sepanjang 75.0 cm!\n",
             "Daya tahan pedang: 100\n",
             "\n",
-            "Panah Petir melesat! Sisa anak panah: 2.\n",
-            "Panah Petir melesat! Sisa anak panah: 1.\n",
-            "Panah Petir melesat! Sisa anak panah: 0.\n",
-            "Amunisi Panah Petir habis!\n",
-            "Amunisi Panah Petir habis!\n",
+            "Panah Hijau melesat! Sisa anak panah: 2\n",
+            "Panah Hijau melesat! Sisa anak panah: 1\n",
+            "Panah Hijau melesat! Sisa anak panah: 0\n",
+            "Amunisi Panah Hijau habis!\n",
             "Sisa ammo panah: 0\n",
             "\n",
-            "Error saat membuat objek dari kelas abstrak: Can't instantiate abstract class Senjata with abstract methods daya_tahan, serang\n"
+            "Error: Can't instantiate abstract class Senjata with abstract methods daya, serang\n"
           ]
         }
       ]
